<resources>
    <string name="app_name">GatheringApp</string>
    //LoginActivity strings
    <string name="userNameInputHint">Bruger Navn</string>
    <string name="passwordInputHint">Password</string>
    <string name="loginButtonText">Login</string>
    <string name="createNewUserButtonText">Opret Ny Bruger</string>
    <string name="loginFailed">Bruger Navn Eller Adgangkode Er Forkert</string>
    //CreateNewUserActivity strings
    <string name="createButtonText">Opret</string>
    <string name="newEmailInputHint">Email</string>
    <string name="newPasswordInputHint">Password</string>
    <string name="newNameInputHint">Navn</string>
    <string name="newUserNameInputHint">Bruger Navn</string>
    <string name="createUserFailed">Brugeren Blev Ikke Oprettet. Bruger Navnet Findes Allerrede</string>
    <string name="passwordFailed">De To Passwords Stemmer Ikke Overens</string>
    //CreateNoticeActivity strings
    <string name="createNoticeNameHint">Navn</string>
    <string name="createNoticeDescriptionHint">Beskrivelse</string>
    <string name="createNoticeAddressHint">Adresse</string>
    <string name="createNoticeButtonText">Opret</string>
    <string name="createNoticeSelectTimeAndDate">Vælg dato og tid</string>
    <string name="createNoticeSelectTimeAndDateButtonText">Færdig</string>
    <string name="createNoticeReturnButtonText">Tilbage</string>
    <string name="createNoticeSuccess">Opslaget er lavet</string>
    <string name="createNoticeNotSuccess">Navnet skal være unikt</string>
    <string name="createNoticeNameCantBeEmpty">Navne feltet skal være udfyldt</string>
    <string name="locationNotAvailable">Gps er ikke tilgængelig</string>
    <string name="createNoticeTimePickerLbl">Tid og dato</string>
    <string name="createNoticeDatePickerLbl">Dato</string>
    //OverviewNoticeActivity strings
    <string name="overviewCreateNoticeButton">Opret Opslag</string>
    <string name="overviewUserConnectionButton">Find Brugerer</string>
    //UserConnectionActivity strings
    <string name="UserConnectionActivityButtontext">Tilbage</string>
    <string name="UserConnectionActivitySwitchText">Søge status</string>
    <string name="ConnectionErrorToast">Forbindelsen fejlede</string>
    <string name="ConnectionHistoryButtonText">Historik</string>
    //UserConnectionHistoryActivity strings
    <string name="HistoryBackButtonText">Tilbage</string>
    //MessageOviewActivity
    <string name="messageSendButton">Send</string>
    //OptionMenu
    <string name="radius">Sæt Radius</string>
    <string name="radius500">500 Meter</string>
    <string name="radius1000"> 1 km</string>
    <string name="radius2000"> 2 km</string>
    <string name="radius5000"> 5 km</string>
</resources>
