<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Activities.LoginActivity"
    android:background="@color/background">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text=""
        android:ems="10"
        android:id="@+id/userNameInput"
        android:hint="@string/userNameInputHint"
        android:singleLine="true"
        android:layout_above="@+id/passwordInput"
        android:layout_alignLeft="@+id/passwordInput"
        android:layout_alignStart="@+id/passwordInput"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passwordInput"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:text=""
        android:hint="@string/passwordInputHint"
        android:singleLine="true"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="10dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginButtonText"
        android:id="@+id/loginButton"
        android:layout_below="@+id/passwordInput"
        android:layout_centerHorizontal="true"
        android:onClick="login" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/createNewUserButtonText"
        android:id="@+id/createNewUserButton"
        android:layout_centerHorizontal="true"
        android:onClick="createNewUser"
        android:layout_below="@+id/loginButton" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/logoImageView"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/userNameInput"
        android:layout_alignStart="@+id/userNameInput"
        android:layout_above="@+id/userNameInput"
        android:layout_marginBottom="20dp"
        android:src="@drawable/logo"
        android:layout_alignRight="@+id/userNameInput"
        android:layout_alignEnd="@+id/userNameInput" />

</RelativeLayout>
